# Genzo

./: .gitignore  App.cpp  App.h  CMakeLists.txt  CMakePresets.json  Codec.cpp  Codec.h  MainFrame.cpp  MainFrame.h  ResponsiveImageFrame.cpp  ResponsiveImageFrame.h  app_resources.rc  vcpkg.json
overlay-ports/kvazaar/: portfile.cmake  vcpkg.json
overlay-ports/libheif/: portfile.cmake  vcpkg.json
